# seqcli

./: .gitignore  CMakeLists.txt  README.md  alert.c  alert.h  brightness.c  brightness.h  colors.c  colors.h  cursor.c  cursor.h  fmt.h  grid.c  grid.h  gridscreen.c  gridscreen.h  keyboard.c  keyboard.h  main.c  menu.c  menu.h  screen.c  screen.h  select.c  select.h  seqfile.c  seqfile.h  textbox.c  textbox.h  viewport.c  viewport.h  workdir.c  workdir.h
